--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.0.3",
+    "node-static": "^0.7.11",
     "nodemon": "^1.19.1",
     "ws": "^7.0.0"
   }
